--- a/savings/templates/base.html
+++ b/savings/templates/base.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Include the Bulma CSS framework for styling -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
     <title>SavingBuckets</title>
   </head>
   <body>
-    <section>
-      <h1>SavingBuckets</h1>
-      <p>Reach Your Savings Goals with Ease.</p>
+    {% comment %} class="hero is-small is-success mb-4" {% endcomment %}
+    <section class="here is-small is-success mb-4">
+      <div class="hero-body">
+        <h1 class="title is-1">SavingBuckets</h1>
+        <p class="subtitle is-4">Reach Your Savings Goals with Ease.</p>
+      </div>
     </section>
-    <div>{% block content %} {% endblock content %}</div>
+    <div class="container">
+      <div class="columns">{% block content %} {% endblock content %}</div>
+    </div>
   </body>
 </html>
