--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} 
+{% load static %}
 <title>{% block title %}Home{% endblock %}</title>
 {% block content %}
 <h1>Homepage</h1>
