--- a/savings/templates/savings/navbar.html
+++ b/savings/templates/savings/navbar.html
@@ -1,8 +1,32 @@
-<div>
+
+{% url 'savings:home' as home_url %}
+{% url 'savings:history' as history_url %}
+{% url 'savings:contact' as contact_url %}
+
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand" href="{{home_url}}">SavingBuckets</a>
+        <p class="font-change tagline" >Reach your saving goals with ease.</p>
+        <button class="navbar-toggler font-weight-bold sb-bg-primary font-change " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item mx-0 mx-lg-1"><a class="font-change nav-link py-3 px-0 px-lg-3 rounded {% if request.path == home_url %}active{% endif %}" href="{{home_url}}">Home</a></li>
+                <li class="nav-item mx-0 mx-lg-1"><a class="font-change nav-link py-3 px-0 px-lg-3 rounded {% if request.path == history_url %}active{% endif %}" href="{{history_url}}">History</a></li>
+                <li class="nav-item mx-0 mx-lg-1"><a class="font-change nav-link py-3 px-0 px-lg-3 rounded {% if request.path == contact_url %}active{% endif %}" href="{{contact_url}}">Contact</a></li>
+            </ul>
+        </div>
+    </div> 
+</nav>
+
+<!-- <nav>
     {% url 'savings:home' as home_url %}
     <span>{% if request.path == home_url %}Landing Page{% else %}<a href="{{home_url}}">Landing Page</a>{% endif %}</span>
     {% url 'savings:history' as history_url %}
     <span>{% if request.path == history_url %}History{% else %}<a href="{{history_url}}">History</a>{% endif %}</span>
     {% url 'savings:contact' as contact_url %}
     <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{contact_url}}">Contact</a>{% endif %}</span>
-</div>
+</nav> -->
