--- a/savings/templates/base.html
+++ b/savings/templates/base.html
@@ -36,5 +36,6 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
             <!-- Core theme JS-->
             <script src="{% static 'theme/js/scripts.js' %}"></script>
-            
+            <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+              ':35729/livereload.js?snipver=2"></' + 'script>')</script>
   </body>
