--- a/savings/templates/savings/navbar.html
+++ b/savings/templates/savings/navbar.html
@@ -4,10 +4,12 @@
 {% url 'savings:contact' as contact_url %}
 
 <!-- Navigation-->
-<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="{{home_url}}">SavingBuckets</a>
-        <p class="font-change tagline" >Reach your saving goals with ease.</p>
+        <div class="navbar-flex">
+            <a class="navbar-brand text-uppercase" href="{{home_url}}">SavingBuckets</a>
+            <p class="font-change tagline text-uppercase" >Reach your saving goals with ease.</p>
+        </div>
         <button class="navbar-toggler font-weight-bold sb-bg-primary font-change " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
