--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@
 primary-colors {
     color: #DDDCDA; /* light background */
     color: #1E3706; /* main */
-    color: #FAF9F8; /* grey for higlight */
+    color: #E9E9E9; /* grey for higlight */
 }
 
 body {
@@ -26,12 +26,15 @@ body {
 } 
 
 .bg-secondary {
-    background-color: #DDDCDA;
+    background-color: #E9E9E9;
 }
 
 .navbar-brand {
+    padding-top: 0rem !important;
+    padding-bottom: 0rem !important;
+    margin-right: 0rem !important;
     font-family: 'Savingbuckets Font';
-    font-size: larger; /* this does not work - I want to make the text larger*/
+    font-size: 2.5rem !important; 
     color: #1E3706 !important;
 }
 
@@ -42,23 +45,23 @@ body {
 .tagline {
     font-size: smaller;
     color: #1E3706;
+    /* margin-top: 0rem; */
 }
 
+#mainNav {
+    padding-top: 0rem ;
+    padding-bottom: 0rem;
+}
 #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     background: #DDDCDA;
   }
-
-/* .navbar-nav .show > .nav-link,
-.navbar-nav .nav-link.active {
-  color: #1E3706;
-} */
 
 #mainNav .navbar-nav li.nav-item a.nav-link {
     color: #1E3706;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-    color: #FAF9F8;
+    color: #E9E9E9;
     background: #1E3706;
 }
 
@@ -72,7 +75,11 @@ body {
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
-    color: #fff;
+    color: #E9E9E9;
     background: #1E3706;
 }
 
+.navbar-flex {
+    display: flexbox;
+    align-content: space-around;
+}
