intial structure for overview / home page

--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -2,5 +2,16 @@
 {% load static %}
 <title>{% block title %}Home{% endblock %}</title>
 {% block content %}
-<h1>Homepage</h1>
+
+<!-- They will not be able to edit this but there will be a button where they can deposit money into an account.  -->
+<!-- This will be a for loop that loops through all the savings account -->
+<h3>Hellloooo</h3> </h3> 
+<h3>Savings Account Name: Saved amount </h3> 
+<button class=deposit-btn>DEPOSIT MONEY</button>
+
+<!-- for loop thatn loops through the  -->
+<h4>SAvings Goal : name - R 00.00</h4>
+<button>EDIT</button>
+<button>DELETE</button>
+<button>BUY</button>
 {% endblock content %}
