update contact page with basic structure

--- a/savings/templates/savings/contact.html
+++ b/savings/templates/savings/contact.html
@@ -2,4 +2,12 @@
 <title>{% block title %}Contact Us{% endblock %}</title>
 {% block content %}
 <h1>Contact Us</h1>
+<h5>Hello, I'm Madelé - creator and designer of SavingBuckets.
+    If you have any feedback or ideas on how we can improve SavingBuckets, I'd love to hear from you.
+    Feel free to connect with me via any of the icons below.
+</h5>
+<p>Github</p>
+<p>linkedin</p>
+<p>email</p>
+<p>twitter</p>
 {% endblock content %}
