--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Savingbuckets Font';
     color: #1E3706;
     margin-left: 20px;
-    padding-left: 2.6rem;
+    padding-left: 4rem;
 }
 /* this body is not changing anything */
 
@@ -103,10 +103,18 @@ body {
 button {
     margin-left: 10px;
     align-self: center;
+    margin-bottom: 20px;
+    vertical-align: middle;
 }
 
 h5 {
     font-weight: bold;
+    font-size: 1rem !important; 
+    font-family: 'Savingbuckets Font';
+}
+
+h1 {
+    font-family: 'Savingbuckets Font';
 }
 
 .img-icons {
@@ -116,6 +124,8 @@ h5 {
 
 .contact_body {
     background-image: url("/static/theme/assets/money-transp.png"); 
+    font-size: 2rem;
+    font-weight: bolder;
     }
 
 .img-me {
@@ -127,4 +137,60 @@ h5 {
 .contact-box {
     display: flex;
     flex-direction: row;
+}
+
+/* timeline */
+
+.history-tl-container{
+    width:50%;
+    margin:auto;
+    display:block;
+    position:relative;
+}
+.history-tl-container ul.tl{
+    margin:10px 0;
+    padding:0;
+    display:inline-block;
+
+}
+.history-tl-container ul.tl li{
+    list-style: none;
+    margin:auto;
+    min-height:50px;
+    /*background: rgba(255,255,0,0.1);*/
+    border-left:2px dashed #1E3706;
+    padding:0 0 50px 30px;
+    position:relative;
+}
+.history-tl-container ul.tl li:last-child{ border-left:0;}
+.history-tl-container ul.tl li::before{
+    position: absolute;
+    left: -18px;
+    top: -5px;
+    content: " ";
+    border: 8px solid rgba(255, 255, 255, 0.74);
+    border-radius: 500%;
+    background: #1E3706;
+    height: 20px;
+    width: 20px;
+    transition: all 500ms ease-in-out;
+
+}
+.history-tl-container ul.tl li:hover::before{
+    border-color:  #1E3706;
+    transition: all 1000ms ease-in-out;
+}
+ul.tl li .item-title{
+}
+ul.tl li .item-detail{
+    color:rgba(0,0,0,0.5);
+    font-size:12px;
+}
+ul.tl li .timestamp{
+    color: #8D8D8D;
+    position: absolute;
+    width:100px;
+    left: -60%;
+    text-align: left;
+    font-size: 12px;
 }
