--- a/savings/templates/savings/navbar.html
+++ b/savings/templates/savings/navbar.html
@@ -4,7 +4,7 @@
 {% url 'savings:contact' as contact_url %}
 
 <!-- Navigation-->
-<nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg bg-secondary fixed-top" style="background-color: #E9E9E9 " id="mainNav">
     <div class="container">
         <div class="navbar-flex">
             <a class="navbar-brand text-uppercase" href="{{home_url}}">SavingBuckets</a>
