--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -4,38 +4,66 @@
 
 {% block content %}
 
-<!-- They will not be able to edit this but there will be a button where they can deposit money into an account.  -->
-<!-- This will be a for loop that loops through all the savings account -->
 <div>
     <h1 style="display: inline;">ACCOUNTS</h1>
-    <button id="account-btn">➕Add Account</button>
+    <a href="{% url 'savings:add-account' %}" target="_blank">
+    <button id="account-btn" style="vertical-align: middle;">➕Add Account</button>
+    </a>
+    <a href="{% url 'savings:deposit' %}" target="_blank">
+        <button id="deposit-btn">➕ Deposit Money</button>
+        </a>
 </div>
 <div id="accounts">
     {% for account in accounts %}
-    <div>
-        <h5 style="display: inline;">{{ account}}</h5>
-        <button id="deposit-btn">DEPOSIT MONEY</button>
-    </div>
+        <div>
+            <li>
+                <h5 style="display: inline;">{{ account}}</h5>
+                <button id="delete-btn" >🗑️</button>
+            </li>
+        </div>
     {% endfor %}
 </div>
-
-<div>space please</div>
+<br/><br/>
 <div>
     <h1 style="display: inline;">SAVINGS GOALS</h1>
-    <button id="goal-btn" >➕Add Savings Goal</button>
+    <a href="{% url 'savings:add-goal' %}" target="_blank">
+    <button id="goal-btn"  >➕Add</button>
+    </a>
+
 </div>
 <div id="goals">
     {% for goal in goals %}
-    <div class="">
-        <!-- <img src="{{ goal.image }}" alt="{{ goal.name }}" /> --> 
-        <div > 
-            <h5>{{ goal.name }}: {{ goal.cost }}</h5>
-            <div class="goal_progress_btns">
-                <p style="display: inline;">PROGRESS BAR</p> 
-                <button id="buy-btn">BUY</button>
-                <button id="edit-btn">⚙</button>
-                <button id="delete-btn">🗑️</button>
+    <div>
+        <div class="d-flex flex-column"> 
+            <div class="d-flex flex-row">
+                <div>
+                    <img src="{{ goal.image }}" onerror="this.onerror=null; this.src='Default.jpg'" alt="{{ goal.name }}" />
+                </div>
+                <h5>{{ goal.name }}: {{ goal.cost }} </h5>
+                <div class="goal_progress_btns">    
+                    <button id="buy-btn">BUY</button>
+                    <button id="edit-btn">⚙</button>
+                    <button id="delete-btn">🗑️</button>
+                </div>
             </div>
+            <div class="progress d-flex flex-column" >
+                <div id="progress-el" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" onload="calc_progress()"></div>
+            </div>
+            <script>
+                function calc_progress() {
+                var progress = document.getElementById("progress-el");
+                var total = goal.account.amount / goal.cost * 100;
+                if (total > 100) {
+                    progress.style.width = `100%`;
+                    progress.ariaValueNow = 100;
+                    return ;
+                }
+                progress.style.width = `${total}%`;
+                progress.ariaValueNow = total;
+                return;
+                }
+            </script>
+                
         </div>
     </div>
     {% endfor %}
