removed background image from contact.html

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -123,7 +123,7 @@ h1 {
 }
 
 .contact_body {
-    background-image: url("/static/theme/assets/money-transp.png"); 
+    /* background-image: url("/static/theme/assets/money-transp.png");  */
     font-size: 2rem;
     font-weight: bolder;
     }
