--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -4,15 +4,17 @@
 
 {% block content %}
 
-<div>
-    <h1 style="display: inline;">ACCOUNTS</h1>
+{% comment %} SAVINGS ACCOUNTS {% endcomment %}
+<div style="d-flex flex-column">
+    <h1 style="d-flex flex-column" style="display: inline;">ACCOUNTS</h1>
     <a href="{% url 'savings:add-account' %}" target="_blank">
-    <button id="account-btn" style="vertical-align: middle;">➕Add Account</button>
+        <button id="account-btn" style="vertical-align: middle;">➕Add</button>
     </a>
     <a href="{% url 'savings:deposit' %}" target="_blank">
-        <button id="deposit-btn">➕ Deposit Money</button>
-        </a>
+        <button id="deposit-btn">➕ Deposit</button>
+    </a>
 </div>
+
 <div id="accounts">
     {% for account in accounts %}
         <div>
@@ -24,53 +26,53 @@
     {% endfor %}
 </div>
 <br/><br/>
+{% comment %} SAVINGS GOALS {% endcomment %}
 <div>
     <h1 style="display: inline;">SAVINGS GOALS</h1>
     <a href="{% url 'savings:add-goal' %}" target="_blank">
-    <button id="goal-btn"  >➕Add</button>
+    <button id="goal-btn" >➕Add</button>
     </a>
 
 </div>
-<div id="goals">
+<table id="goals">
     {% for goal in goals %}
-    <div>
-        <div class="d-flex flex-column"> 
+    <tr>
+        <td class="d-flex flex-column"> 
             <div class="d-flex flex-row">
-                <div>
-                    {% comment %} <img src="{{ goal.image }}" onerror="this.onerror=null; this.src='Default.jpg'" alt="{{ goal.name }}" /> {% endcomment %}
-                </div>
                 <h5>{{ goal.name }}: {{ goal.cost }} </h5>
-                <div class="goal_progress_btns">    
-                    <button id="buy-btn">BUY</button>
-                    <button id="edit-btn">⚙</button>
-                    <button id="delete-btn">🗑️</button>
-                </div>
             </div>
-            <div class="progress d-flex flex-column" >
-                <div id="progress-el" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" onload="calc_progress()"></div>
+        </td>
+        <td>
+            <div class="goal_progress_btns">    
+                <button id="buy-btn">BUY</button>
+                <a href="{% url 'savings:update-goal' goal.id %}" ><button id="edit-btn">⚙</button></a>
+                <button id="delete-btn">🗑️</button>
             </div>
-            <script>
-                function calc_progress() {
-                var progress = document.getElementById("progress-el");
-                var total = goal.account.amount / goal.cost * 100;
-                if (total > 100) {
-                    progress.style.width = `100%`;
-                    progress.ariaValueNow = 100;
-                    return ;
-                }
-                progress.style.width = `${total}%`;
-                progress.ariaValueNow = total;
-                return;
-                }
-            </script>
-                
-        </div>
-    </div>
+        </td>
+    </tr>
     {% endfor %}
-</div>
+</table>
 
 
 
 {% endblock content %}
 
+{% comment %} PROGRESS BAR - not in use {% endcomment %}
 
+{% comment %} <div class="progress d-flex flex-column" >
+    <div id="progress-el" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" onload="calc_progress()"></div>
+</div>
+<script>
+    function calc_progress() {
+    var progress = document.getElementById("progress-el");
+    var total = goal.account.amount / goal.cost * 100;
+    if (total > 100) {
+        progress.style.width = `100%`;
+        progress.ariaValueNow = 100;
+        return ;
+    }
+    progress.style.width = `${total}%`;
+    progress.ariaValueNow = total;
+    return;
+    }
+</script> {% endcomment %}
