--- a/savings/templates/savings/update_goal.html
+++ b/savings/templates/savings/update_goal.html
@@ -9,6 +9,8 @@
     {% csrf_token %}
     {{ form.as_p }}
     <br>
-    <input type="submit" value="Update" class="btn btn-secondary">
+        <input type="submit" value="Update" class="btn btn-secondary">
+        <a href="{% url 'savings:home' %}"><input type="button" value="Back" class="btn btn-secondary"></a>
+
 
 {% endblock content %}
