--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -7,9 +7,11 @@
 {% comment %} SAVINGS ACCOUNTS {% endcomment %}
 <div>
     <h1 style="display: inline">ACCOUNTS</h1>
-    <a href="{% url 'savings:add-account' %}" >
+
+    <p>Would you like to create a new savings acount? <a href="{% url 'savings:add-account' %}" >
         <button id="account-btn" style="vertical-align: middle;">➕</button>
-    </a>
+    </a></p>
+    
     <a href="{% url 'savings:deposit' %}" >
         <button id="deposit-btn">Deposit</button>
     </a>
@@ -48,7 +50,7 @@
                 </td>
                 <td>
                     <div class="goal_progress_btns">    
-                        <a href="{% url 'savings:complete-goal' goal.id %}" ><button id="buy-btn">BUY</button></a>
+                        <a href="{% url 'savings:complete-goal' goal.id %}" ><button id="buy-btn" class="btn {% if balance.amount >= goal.cost.amount %}btn-success{% else %}btn-secondary{% endif %}" onclick="return confirm('Are you sure you want to complete this gaol?') ? window.location.href='{% url 'savings:home' %}' : false;">BUY</button></a>
                         <a href="{% url 'savings:update-goal' goal.id %}"><button id="edit-btn">⚙</button></a>
                         <a href="{% url 'savings:delete-goal' goal.id %}"> <button id="delete-btn"  onclick="return confirm('Are you sure you want to delete this savings goal?') ? window.location.href='{% url 'savings:home' %}' : false;">Delete</button></a>
 
@@ -63,9 +65,9 @@
 
 {% endblock content %}
 
-{% comment %} PROGRESS BAR - not in use {% endcomment %}
+<!-- {% comment %} PROGRESS BAR - not in use {% endcomment %} -->
 
-{% comment %} <div class="progress d-flex flex-column" >
+<!-- {% comment %} <div class="progress d-flex flex-column" >
     <div id="progress-el" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" onload="calc_progress()"></div>
 </div>
 <script>
@@ -81,4 +83,4 @@
     progress.ariaValueNow = total;
     return;
     }
-</script> {% endcomment %}
+</script> {% endcomment %} -->
