--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -3,19 +3,28 @@
 <title>{% block title %}Home{% endblock %}</title>
 
 {% block content %}
+<table> 
 
-{% comment %} SAVINGS ACCOUNTS {% endcomment %}
-<div>
-    <h1 style="display: inline">ACCOUNTS</h1>
+    {% comment %} SAVINGS ACCOUNTS {% endcomment %}
 
-    <p>Would you like to create a new savings acount? <a href="{% url 'savings:add-account' %}" >
-        <button id="account-btn" style="vertical-align: middle;">➕</button>
-    </a></p>
-    
-    <a href="{% url 'savings:deposit' %}" >
-        <button id="deposit-btn">Deposit</button>
-    </a>
-</div>
+    <tr>
+        <td>
+
+            <h1 style="display: inline">Accounts</h1>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href="{% url 'savings:add-account' %}" >
+                <button id="account-btn" style="vertical-align: middle;" class="btn btn-secondary">New Savings Account
+                </button>
+            </a>
+            <a href="{% url 'savings:deposit' %}" >
+                <button id="deposit-btn" class="btn btn-secondary">Deposit money</button>
+            </a>
+        </td>
+    </tr>
+
 
 <table id="accounts">
     {% for account in accounts %}
@@ -24,7 +33,7 @@
                 <h5 style="display: inline;">{{ account}}</h5>
             </td>
             <td>
-                <a href="{% url 'savings:delete-account' account.id %}" > <button id="delete-btn"  onclick="return confirm('Are you sure you want to delete this account?') ? window.location.href='{% url 'savings:home' %}' : false;">Delete</button></a>
+                <a href="{% url 'savings:delete-account' account.id %}" > <button id="delete-btn" class="btn btn-secondary" onclick="return confirm('Are you sure you want to delete this account?') ? window.location.href='{% url 'savings:home' %}' : false;">Delete</button></a>
 
             </td>
         </tr>
@@ -34,9 +43,9 @@
 <br/><br/>
 {% comment %} SAVINGS GOALS {% endcomment %}
 <div>
-    <h1 style="display: inline;">SAVINGS GOALS</h1>
+    <h1 style="display: inline;">Saving Goals</h1>
     <a href="{% url 'savings:add-goal' %}" >
-    <button id="goal-btn" >➕Add</button></a>
+    <button id="goal-btn" class="btn btn-secondary" >Add</button></a>
 
 </div>
 <table id="goals">
@@ -50,9 +59,11 @@
                 </td>
                 <td>
                     <div class="goal_progress_btns">    
-                        <a href="{% url 'savings:complete-goal' goal.id %}" ><button id="buy-btn" class="btn {% if balance.amount >= goal.cost.amount %}btn-success{% else %}btn-secondary{% endif %}" onclick="return confirm('Are you sure you want to complete this gaol?') ? window.location.href='{% url 'savings:home' %}' : false;">BUY</button></a>
-                        <a href="{% url 'savings:update-goal' goal.id %}"><button id="edit-btn">⚙</button></a>
-                        <a href="{% url 'savings:delete-goal' goal.id %}"> <button id="delete-btn"  onclick="return confirm('Are you sure you want to delete this savings goal?') ? window.location.href='{% url 'savings:home' %}' : false;">Delete</button></a>
+                        <a href="{% url 'savings:complete-goal' goal.id %}" ><button id="buy-btn" class="btn {% if goal.balance.amount >= goal.cost %}btn-success{% else %}btn-secondary{% endif %}" onclick="return confirm('Are you sure you want to complete this gaol?') ? window.location.href='{% url 'savings:home' %}' : false;">BUY</button></a>
+                        <a href="{% url 'savings:update-goal' goal.id %}"><button id="edit-btn" class="btn btn-secondary" >⚙</button></a>
+                        <a href="{% url 'savings:delete-goal' goal.id %}"> <button id="delete-btn"  onclick="return confirm('Are you sure you want to delete this savings goal?') ? window.location.href='{% url 'savings:home' %}' : false;" class="btn btn-secondary">Delete</button></a>
+
+                    
 
                     </div>
                 </td>
@@ -63,6 +74,7 @@
 
 
 
+</table>
 {% endblock content %}
 
 <!-- {% comment %} PROGRESS BAR - not in use {% endcomment %} -->
