--- a/savings/templates/savings/update_goal.html
+++ b/savings/templates/savings/update_goal.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Update Savings Goal: {{ goal.name }} </h1>
 <br>
-<form action="" method="POST">
+<form action="" method="POST" style="max-width: 500px;">
     {% csrf_token %}
     {{ form.as_p }}
     <br>
