--- a/static/css/main.css
+++ b/static/css/main.css
@@ -175,8 +175,8 @@ h1 {
     height: 20px;
     width: 20px;
     transition: all 500ms ease-in-out;
-
 }
+
 .history-tl-container ul.tl li:hover::before{
     border-color:  #1E3706;
     transition: all 1000ms ease-in-out;
@@ -201,9 +201,18 @@ ul.tl li .timestamp{
 }
 
 .btn-secondary {
-    background-color: #1E3706 !important;
+    background-color: #1E3706;
+    
+}
+
+.btn-secondary:hover {
+    background-color: #6D7C60 ;
 }
 
 .btn-success {
     background-color: greenyellow !important;
+}
+
+#locked-btn {
+    background-color: #6D7C60 ;
 }
