add back button to history.html

--- a/savings/templates/savings/history.html
+++ b/savings/templates/savings/history.html
@@ -6,23 +6,38 @@
 
 <!-- fix the line and li button so they are alligned -->
 
-<div>
-    <div class="history-tl-container">
-        <ul class="tl">
+
+    <div class="history-container" >
+
             {% for goal in completed_goals %}
-            <li class="tl-item" ng-repeat="item in retailer_history">
+            <div class="history-item">
                 <div class="timestamp">
                     {{ goal.date_completed}}
                 </div>
+                <div class="dots">
+                    <span class="dot"></span>
+                    <span class="dot-sm"></span>
+                </div>
                 <div class="item-title">{{goal.name}}</div>
                 <div class="item-detail">{{goal.cost}}</div>
-            </li>
+            </div>
             {% endfor %}
-        </ul>
-    </div>
-</div>
 
+    </div>
+
+
+
+<a href="{% url 'savings:home' %}" ><input type="button" value="Back" class="btn btn-secondary" style="margin-left: 70p !important;"></a>
 
 {% endblock content %}
 
 {% comment %} https://codepen.io/pranjal-goswami/pen/RNdpOP {% endcomment %}
+
+
+{% comment %} <li class="tl-item" ng-repeat="item in retailer_history">
+    <div class="timestamp">
+        {{ goal.date_completed}}
+    </div>
+    <div class="item-title">{{goal.name}}</div>
+    <div class="item-detail">{{goal.cost}}</div>
+</li> {% endcomment %}
