add btn-secondary to back buttons

--- a/savings/templates/savings/add_account.html
+++ b/savings/templates/savings/add_account.html
@@ -10,11 +10,11 @@
 </div>
     <br>
     <a href="{% url 'savings:deposit' %}" >
-    <button id="home-btn"  >Deposit money</button>
+    <button id="home-btn" class="btn btn-secondary" >Deposit money</button>
     </a>
     <br>
     <a href="{% url 'savings:home' %}" >
-    <button id="home-btn"  >Go back to home</button>
+    <button id="home-btn" class="btn btn-secondary" >Go back to home</button>
     </a>
 {% else %}
     <form action="" method="post" style="max-width: 500px;">
