--- a/savings/templates/savings/add_goal.html
+++ b/savings/templates/savings/add_goal.html
@@ -8,7 +8,7 @@
     Now let's start saving! 💸
     <br>
     <a href="{% url 'savings:home' %}" >
-    <button id="home-btn"  >Go back to home</button>
+    <button id="home-btn"  class="btn btn-secondary">Go back to home</button>
     </a>
 {% else %}
     <h3>Create a new savings goal:</h3>
