--- a/savings/templates/savings/deposit.html
+++ b/savings/templates/savings/deposit.html
@@ -8,7 +8,7 @@
     You're one step closer towards your goal!! 💸
     <br>
     <a href="{% url 'savings:home' %}" >
-    <button id="home-btn"  >Go back to home</button>
+    <button id="home-btn"  class="btn btn-secondary">Go back to home</button>
     </a>
 {% else %}
     <h3>Deposit money into savings account:</h3>
