--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -3,96 +3,86 @@
 <title>{% block title %}Home{% endblock %}</title>
 
 {% block content %}
-<table> 
 
-    {% comment %} SAVINGS ACCOUNTS {% endcomment %}
+<div style="width: 100%; margin: 0 auto; ">
+<div style="display:flex">
+    <div style="width:50%">
+        <table id="goals-table">
+            <div>
+                <h1 style="display: inline;">Saving Goals</h1>
+                <a href="{% url 'savings:add-goal' %}" >
+                <button id="goal-btn" class="btn btn-secondary" >➕</button></a>
+            </div>
 
-    <tr>
-        <td>
+            <table id="goals">
+                <tbody>
+                    {% for goal in goals %}
+                        {% if goal.status != 'completed' %}
+                            <tr>
+                                <td class="d-flex flex-column"> 
+                                    <div class="d-flex flex-row">
+                                        <h5 style="margin-top: 15px;">{{ goal.name }}: {{ goal.cost }}</h5>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="goal-progress-btns">  
+                                        <!-- BUY btn  -->
+                                    
+                                        <button id="buy-btn" class="btn btn-secondary buy-btn {% if goal.account.amount >= goal.cost %} btn-success{% else %} disabled{% endif %}" 
+                                            {% if goal.account.amount < goal.cost %} disabled="disabled" value="Insufficient Funds" {% endif %}
+                                            onclick="if (confirm('Are you sure you want to complete this goal?')) { window.location.href = '{% url 'savings:complete-goal' goal.id %}'; }" >
+                                            {% if goal.account.amount < goal.cost %} 🔒🔒 {% else %} BUY {% endif %}
+                                    </button>
+                                    
+                                        <!-- EDIT btn  -->
+                                        <a href="{% url 'savings:update-goal' goal.id %}">
+                                            <button id="edit-btn" class="btn btn-secondary" >⚙</button>
+                                        </a>
+                                        <!-- DELETE btn  -->
+                                        <a href="{% url 'savings:delete-goal' goal.id %}">
+                                            <button id="delete-btn"  onclick="return confirm('Are you sure you want to delete this savings goal?') ? window.location.href='{% url 'savings:home' %}' : false;" class="btn btn-secondary">🗑️</button>
+                                        </a>
+                                    </div>
+                                </td>     
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>  
+        </table>
+    </div>
 
+<!-- Add your Accounts section here -->
+<div style="width:50%; padding-left: 10px;">
+    <table id="accounts-table">
+        <div class="goal-progress-btns">
             <h1 style="display: inline">Accounts</h1>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <a href="{% url 'savings:add-account' %}" >
-                <button id="account-btn" style="vertical-align: middle;" class="btn btn-secondary">New Savings Account
-                </button>
+            <a href="{% url 'savings:add-account' %}">
+                <button id="account-btn" style="vertical-align: middle;" class="btn btn-secondary">➕</button>
             </a>
-            <a href="{% url 'savings:deposit' %}" >
-                <button id="deposit-btn" class="btn btn-secondary">Deposit money</button>
+            <a href="{% url 'savings:deposit' %}">
+                <button id="deposit-btn" class="btn btn-secondary">Deposit</button>
             </a>
-        </td>
-    </tr>
-
-
-<table id="accounts">
-    {% for account in accounts %}
-        <tr>
-            <td>
-                <h5 style="display: inline;">{{ account}}</h5>
-            </td>
-            <td>
-                <a href="{% url 'savings:delete-account' account.id %}" > <button id="delete-btn" class="btn btn-secondary" onclick="return confirm('Are you sure you want to delete this account?') ? window.location.href='{% url 'savings:home' %}' : false;">Delete</button></a>
-
-            </td>
-        </tr>
-    {% endfor %}
+        </div>
+        <table id="accounts">
+            <tbody>
+                {% for account in accounts %}
+                    <tr>
+                        <td>
+                            <h5 style="display: inline;"  >{{ account.name }} Account:</h5>
+                        </td>
+                        <td>
+                            <h5 style="display: inline;">{{ account.amount }}</h5>
+                        </td>
+                        <td class="center-btn">
+                            <a href="{% url 'savings:delete-account' account.id %}" > <button id="delete-btn" class="btn btn-secondary" onclick="return confirm('Are you sure you want to delete this account?') ? window.location.href='{% url 'savings:home' %}' : false;">🗑️</button></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </table>
-
-<br/><br/>
-{% comment %} SAVINGS GOALS {% endcomment %}
-<div>
-    <h1 style="display: inline;">Saving Goals</h1>
-    <a href="{% url 'savings:add-goal' %}" >
-    <button id="goal-btn" class="btn btn-secondary" >Add</button></a>
-
 </div>
-<table id="goals">
-    {% for goal in goals %}
-        {% if goal.status != 'completed' %}
-            <tr>
-                <td class="d-flex flex-column"> 
-                    <div class="d-flex flex-row">
-                        <h5>{{ goal.name }}: {{ goal.cost }} </h5>
-                    </div>
-                </td>
-                <td>
-                    <div class="goal_progress_btns">    
-                        <a href="{% url 'savings:complete-goal' goal.id %}" ><button id="buy-btn" class="btn {% if goal.balance.amount >= goal.cost %}btn-success{% else %}btn-secondary{% endif %}" onclick="return confirm('Are you sure you want to complete this gaol?') ? window.location.href='{% url 'savings:home' %}' : false;">BUY</button></a>
-                        <a href="{% url 'savings:update-goal' goal.id %}"><button id="edit-btn" class="btn btn-secondary" >⚙</button></a>
-                        <a href="{% url 'savings:delete-goal' goal.id %}"> <button id="delete-btn"  onclick="return confirm('Are you sure you want to delete this savings goal?') ? window.location.href='{% url 'savings:home' %}' : false;" class="btn btn-secondary">Delete</button></a>
+</div>
 
-                    
-
-                    </div>
-                </td>
-            </tr>
-        {% endif %}
-    {% endfor %}
-</table>
-
-
-
-</table>
 {% endblock content %}
-
-<!-- {% comment %} PROGRESS BAR - not in use {% endcomment %} -->
-
-<!-- {% comment %} <div class="progress d-flex flex-column" >
-    <div id="progress-el" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" onload="calc_progress()"></div>
-</div>
-<script>
-    function calc_progress() {
-    var progress = document.getElementById("progress-el");
-    var total = goal.account.amount / goal.cost * 100;
-    if (total > 100) {
-        progress.style.width = `100%`;
-        progress.ariaValueNow = 100;
-        return ;
-    }
-    progress.style.width = `${total}%`;
-    progress.ariaValueNow = total;
-    return;
-    }
-</script> {% endcomment %} -->
