--- a/static/css/main.css
+++ b/static/css/main.css
@@ -87,7 +87,7 @@ body {
     align-content: space-around;
 }
 
-.goal_progress_btns {
+.goal-progress-btns {
     display: flex;
     flex-direction: row;
 }
@@ -101,9 +101,9 @@ body {
 }
 
 button {
-    margin-left: 10px;
+    margin: 5px;
     align-self: center;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     vertical-align: middle;
 }
 
@@ -131,7 +131,7 @@ h1 {
 .img-me {
     width: auto;
     height: 300px;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .contact-box {
@@ -141,67 +141,69 @@ h1 {
 
 /* timeline */
 
-.history-tl-container{
-    width:50%;
+.history-container{
+    display: flex;
+    flex-direction: column-reverse;
     margin:auto;
-    display:block;
     position:relative;
-    margin: 0px 130px !important;
+    margin: 0px 10px !important;
 }
-.history-tl-container ul.tl{
-    margin:10px 0;
-    padding:0;
-    display:inline-block;
+
+.history-item {
+    display: flex;
 
 }
-.history-tl-container ul.tl li{
-    list-style: none;
-    margin:auto;
-    min-height:50px;
-    /*background: rgba(255,255,0,0.1);*/
-    border-left:2px dashed #1E3706;
-    padding:0 0 50px 30px;
-    position:relative;
+
+.timestamp {
+    width: 200px;
+    text-align: right;
 }
-.history-tl-container ul.tl li:last-child{ border-left:0;}
-.history-tl-container ul.tl li::before{
-    position: absolute;
-    left: -18px;
-    top: -5px;
-    content: " ";
-    border: 8px solid rgba(255, 255, 255, 0.74);
-    border-radius: 500%;
-    background: #1E3706;
+
+.item-title {
+    margin-left: 110px;
+}
+
+.item-detail {
+    margin-left: 110px;
+}
+
+.dots {
     height: 20px;
     width: 20px;
-    transition: all 500ms ease-in-out;
+    display: inline;
+    background-color: red;
 }
 
-.history-tl-container ul.tl li:hover::before{
-    border-color:  #1E3706;
-    transition: all 1000ms ease-in-out;
-}
-ul.tl li .item-title{
-}
-ul.tl li .item-detail{
-    color:rgba(0,0,0,0.5);
-    font-size:12px;
-}
-ul.tl li .timestamp{
-    color: #8D8D8D;
+.dot {
+    height: 20px;
+    width: 20px;
+    background-color: #6D7C60;
+    border-radius: 50%;
+    display: inline-block;
     position: absolute;
-    width:100px;
-    left: -60%;
-    text-align: left;
-    font-size: 12px;
 }
+
+.dot-sm {
+    height: 6px;
+    width: 6px;
+    background-color: #1E3706;
+    border-radius: 50%;
+    display: inline-block; 
+    position: absolute;
+    align-content: center;
+}
+
+
+
+/* end of timeline */
 
 .history-h1 {
-    margin-left: 20px !important;
+    margin-left: 70px !important;
 }
 
 .btn-secondary {
-    background-color: #1E3706;
+    background-color: #E9E9E9;
+    color: #1E3706;
     
 }
 
@@ -210,9 +212,40 @@ ul.tl li .timestamp{
 }
 
 .btn-success {
-    background-color: greenyellow !important;
+    background-color: #1E3706 !important;
+    color: #E9E9E9;
+}
+
+/* .btn-success.buy-btn:hover {
+    background-color: red;
+    color: #DDDCDA;
+    border-color:#198754;
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+} */
+.btn-success:hover {
+    /* background-color: red !important; */
+    /* color: #DDDCDA !important;
+    border-color: #198754 !important; */
+    box-shadow: 0 0 0 0.25rem #A1CCB6;
+    /* border: 2px solid #198754; */
+    /* box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125) !important; */
 }
 
 #locked-btn {
     background-color: #6D7C60 ;
 }
+
+.center-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0;
+}
+
+#goals-table, #accounts-table {
+    display: inline-block;
+    width: 50%;
+    vertical-align: top;
+}
+
