align heading and button

--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -8,7 +8,7 @@
 <div style="display:flex">
     <div style="width:50%">
         <table id="goals-table">
-            <div>
+            <div class="goal-progress-btns">
                 <h1 style="display: inline;">Saving Goals</h1>
                 <a href="{% url 'savings:add-goal' %}" >
                 <button id="goal-btn" class="btn btn-secondary" >➕</button></a>
