--- a/static/css/main.css
+++ b/static/css/main.css
@@ -141,7 +141,7 @@ h1 {
 
 /* timeline */
 
-.history-container{
+/* .history-container{
     display: flex;
     flex-direction: column-reverse;
     margin:auto;
@@ -157,9 +157,9 @@ h1 {
 .timestamp {
     width: 200px;
     text-align: right;
-}
+} */
 
-.item-title {
+/* .item-title {
     margin-left: 110px;
 }
 
@@ -172,9 +172,9 @@ h1 {
     width: 20px;
     display: inline;
     background-color: red;
-}
+} */
 
-.dot {
+/* .dot {
     height: 20px;
     width: 20px;
     background-color: #6D7C60;
@@ -191,9 +191,61 @@ h1 {
     display: inline-block; 
     position: absolute;
     align-content: center;
+} */
+
+.history-container {
+    position: relative;
+    margin: 30px 0;
+    padding-left: 90px; 
+}
+/* for each goal in goal_completed */
+.history-item {
+    position: relative;
+    padding-bottom: 20px;
+    margin-left: 60px;
+    /* background-color: red; */
+    border-left: 2px dashed #1E3706;
+}
+.timestamp {
+    position: absolute;
+    top: 2px;
+    left: -150px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #1E3706;
+}
+.dots {
+    position: absolute;
+    top: 6px;
+    left: -6px;
+    width: 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.dot {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    background-color: #1E3706;
+    box-shadow: 0px 0px 10px 10px rgb(109, 124, 96);
+
 }
 
-
+.item-title {
+    left: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    padding-left: 55px;
+}
+.item-detail {
+    font-size: 14px;
+    color: #999;
+    padding-left: 55px;
+}
 
 /* end of timeline */
 
@@ -216,19 +268,9 @@ h1 {
     color: #E9E9E9;
 }
 
-/* .btn-success.buy-btn:hover {
-    background-color: red;
-    color: #DDDCDA;
-    border-color:#198754;
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-} */
+
 .btn-success:hover {
-    /* background-color: red !important; */
-    /* color: #DDDCDA !important;
-    border-color: #198754 !important; */
     box-shadow: 0 0 0 0.25rem #A1CCB6;
-    /* border: 2px solid #198754; */
-    /* box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125) !important; */
 }
 
 #locked-btn {
