set max-width of cell for goal name

--- a/savings/templates/savings/home.html
+++ b/savings/templates/savings/home.html
@@ -20,7 +20,7 @@
                     {% for goal in goals %}
                         {% if goal.status != 'completed' %}
                             <tr>
-                                <td class="d-flex flex-column"> 
+                                <td class="d-flex flex-column" style="max-width: 300px;"> 
                                     <h5 style="margin-top: 15px;">{{ goal.name }}:</h5>
                                 </td>
                                 <td>
